toast 서비스 생성 및 적용 	modified:   src/app/home/home.component.tns.html 	modified:   src/app/home/home.component.tns.scss 	modified:   src/app/home/unit-list/tab/review/review.component.tns.ts 	new file:   src/app/service/mobile-toast.service.spec.ts 	new file:   src/app/service/mobile-toast.service.tns.ts

--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -4,3 +4,8 @@
         <app-footer></app-footer>
     </GridLayout>
 </GridLayout>
+<AbsoluteLayout [ngClass]="[toast.status === 'show' ? 'show-toast' : 'hide-toast']" horizontalAlignment="center">
+    <StackLayout class="toast-bar">
+        <Label text="{{ toast.msg }}"></Label>
+    </StackLayout>
+</AbsoluteLayout>
