--- a/src/app/home/unit-list/tab/inquiry/inquiry.component.tns.scss
+++ b/src/app/home/unit-list/tab/inquiry/inquiry.component.tns.scss
@@ -1,1 +1,43 @@
 /* Add mobile styles for the component here.  */
+.stack_0{
+    margin: 20 0;
+    .text-box{
+        border-width: 1;
+        border-color: #eee;
+        height: 120;
+        font-size: 15;
+    }
+    .btn-submit{
+        text-align: right;
+        padding: 10 35;
+        background-color: #333;
+        color: #fff;
+    }
+}
+
+.reviews-box{
+    margin-bottom: 10;
+    border-bottom-width: 0.5;
+    border-color: #aaa;
+    .box-top{
+        margin-bottom: 15;
+        .user-name{ margin: 0 6 0 6; color: #333;}
+        .reg-date{margin-right: 6;}
+        .btn-group-action{
+            * {
+                margin: 0 5;
+            }
+        }
+    }
+    .content-text{
+        vertical-align: middle;
+        min-height: 50;
+    }
+}
+
+.reply-container{
+    padding: 10 20;
+    background-color: #f6f6f6;
+    .icon-reply{width: 8; height: 8; margin-right: 6;}
+    .user-name{margin-right: 6;}
+}
