--- a/src/app/home/unit-list/tab/accom-info/accom-info.component.tns.scss
+++ b/src/app/home/unit-list/tab/accom-info/accom-info.component.tns.scss
@@ -1,1 +1,7 @@
 /* Add mobile styles for the component here.  */
+.info-container{
+    margin: 10 0;
+    .info-title{ padding: 10; background-color: #f6f6f6;}
+    .dot-icon{ margin-right: 5;}
+    .info-content{ margin: 5;}
+}
